<resources>
    <string name="app_name">WanAndroid</string>
    <string name="tip_network_error">咦~我网呢？</string>
    <string name="tip_data_empty">坏了! 咋查不到捏?!</string>
    <string name="tips_home">首页</string>
    <string name="tips_project">项目</string>
    <string name="tips_system">体系</string>
    <string name="tips_my">我的</string>
    <string name="loading">正在玩命加载中~</string>
    <string name="fold">展开或折叠历史记录</string>
    <string name="delete">删除历史记录</string>
    <string name="histories_title">历史搜索</string>
    <string name="tip_all_delete">全部删除</string>
    <string name="tip_delete_ok">完成</string>
    <string name="tip_search_text">搜索</string>
    <string name="home_title1">鸿蒙</string>
    <string name="home_title2">推荐</string>
    <string name="home_title3">问答</string>
    <string name="tip_harmony_link">常用链接</string>
    <string name="tip_harmony_project">开源项目</string>
    <string name="tip_harmony_tool">常用工具</string>
    <string name="tip_search">搜索</string>
    <string name="tip_search_hint">搜点啥捏~</string>
    <string name="tip_toast_last_page">当前页为最后一页啦~</string>
    <string name="tip_toast_load_more_success">加载成功~</string>
    <string name="tip_hot_wenda">热门问答</string>
    <string name="tip_normal_wenda">更多问答</string>
    <string name="tip_back">返回按钮</string>
    <string name="tip_search_hint1">搜点啥捏~</string>
    <string name="tip_null">后方服务器好似出了一些问题,加载失败!</string>
    <string name="tip_system">体系</string>
    <string name="tip_course">课程</string>
    <string name="tip_app_not_install">此APP还未安装,无法跳转哦~</string>
    <string name="tip_order">排序</string>
    <string name="tip_login">登录</string>
    <string name="tip_phone_hint">请输入手机号码</string>
    <string name="login_agreement">我已阅读并同意 《隐私政策》 及 《用户服务协议》</string>
    <string name="login_privacy_agreement">《隐私政策》</string>
    <string name="login_user_agreement">《用户服务协议》</string>
    <string name="tip_goto_register">还没账号,去注册~</string>
    <string name="login_style_other">其他登录方式</string>
    <string name="tip_ed_password_hint">请输入密码</string>
    <string name="setting_about_project">本项目的API来自鸿洋提供的 玩Android 开放API，仅供开源学习使用，禁止用于商业用途。\n\n项目中有部分代码和资源参考其他开源项目，如有侵权请联系作者删除。\n\n如有任何问题或建议欢迎在本人的github Issue 中提出，感谢支持~</string>
    <string name="user_privacy_policy">本应用尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。\n\n
1. 适用范围\n\n

(a) 在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；

您了解并同意，以下信息不适用本隐私权政策：\n

(a) 本应用收集到的您在本应用发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；\n

(b) 违反法律规定或违反本应用规则行为及本应用已对您采取的措施。\n\n

2. 信息使用\n\n

(a)本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。\n

(b) 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。\n\n

3. 信息披露\n\n

在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：\n

(a) 经您事先同意，向第三方披露；\n

(b)为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；\n

(c)根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；\n

(d) 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；\n

(e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；\n

(f) 在本应用平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，本应用有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。\n

(g) 其它本应用根据法律、法规或者网站政策认为合适的披露。\n\n

4. 信息存储和交换\n\n

本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。\n\n

5. Cookie的使用\n\n

(a) 在您未拒绝接受cookies的情况下，本应用会在您的计算机上设定或取用cookies ，以便您能登录或使用依赖于cookies的本应用平台服务或功能。本应用使用cookies可为您提供更加周到的个性化服务，包括推广服务。\n

(b) 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的本应用网络服务或功能。\n

(c)通过本应用所设cookies所取得的有关信息，将适用本政策。\n\n

6. 信息安全\n\n

(a) 本应用帐号均有安全保护功能，请妥善保管您的用户名及密码信息。本应用将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。\n\n

7.本隐私政策的更改\n\n

(a)如果决定更改隐私政策，我们会在本政策中、本公司网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。\n

(b)本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。\n\n

请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。\n
</string>
    <string name="tip_not_login">以游客方式访问</string>
    <string name="user_service_policy">欢迎您使用软件及服务，以下内容请仔细阅读。\n\n
1、保护用户个人信息是一项基本原则，我们将会采取合理的措施保护用户的个人信息。除法律法规规定的情形外，未经用户许可我们不会向第三方公开、透漏个人信息。APP对相关信息采用专业加密存储与传输方式，保障用户个人信息安全，如果您选择同意使用APP软件， 即表示您认可并接受APP服务条款及其可能随时更新的内容。\n\n

2、我们将会使用您的以下功能：麦克风、喇叭、WIFI网络、蜂窝通信网络、手机基站数据、SD卡、短信控制、通话权限、蓝牙管理，如果您禁止APP使用以上相关服务和功能，您将自行承担不能获得或享用APP相应服务的后果。\n\n

3、为了提供更好的客户服务，基于技术必要性收集一些有关设备级别事件（例如崩溃）的信息，但这些信息并不能够让我们识别您的 身份。为了能够让APP定位服务更精确，可能会收集并处理有关您实际所在位置信息（例如移动设备发送的GPS信号），WI-FI接入点和 基站位置信息。我们将对上述信息实施技术保护措施，以最大程度保护这些信息不被第三方非法获得，同时，您可以自行选择拒绝我们基于技术必要性 收集的这些信息，并自行承担不能获得或享用APP相应服务的后果。\n\n

4、在您使用我们的产品或服务的过程中，我们可能：需要您提供个人信息，如姓名、电子邮件地址、电话号码、联系地址等以及注册或申请服务时需要 的其它类似个人信息；您对我们的产品和服务使用即表明您同意我们对这些信息的收集和合理使用。您可以自行选择拒绝、放弃使用相关产品或服务。\n\n

5、由于您的自身行为或不可抗力等情形，导致上述可能涉及您隐私或您认为是私人信息的内容发生被泄露、批漏，或被第三方获取、使用、转让等情形的，均由您自行承担不利后果，我们对此不承担任何责任。\n\n

6、我们拥有对上述条款的最终解释权。\n\n
</string>
    <string name="error_phone_number">请输入正确的手机号码</string>
    <string name="tips_read_user_agreement">请阅读并勾选《隐私政策》及《用户服务协议》</string>
    <string name="error_input_password">请输入密码</string>
    <string name="error_input_password_again">请再次输入密码</string>
    <string name="error_input_password_not_equal">两次输入密码不一致，请重新校对!</string>
    <string name="success_login">登录成功</string>
    <string name="tip_forget_password">忘记密码</string>
    <string name="tip_no_login">登录后查看更多内容~</string>
    <string name="tip_collection">收藏</string>
    <string name="tip_classify">分类：</string>
    <string name="tip_success_cancel_collect">取消收藏成功</string>
    <string name="tip_success_collect">收藏成功</string>
    <string name="tip_img">图片</string>
    <string name="tip_collections">收藏夹</string>
    <string name="tip_theme">主题切换</string>
    <string name="tip_theme_dark">夜间模式</string>
    <string name="tip_setting">设置</string>
    <string name="tips_my_share">分享</string>
    <string name="tips_my_message">消息</string>
    <string name="tips_recommend_for">为您推荐</string>
    <string name="tip_goto_information">点击查看个人信息</string>
    <string name="tips_grade">等级</string>
    <string name="tips_integral">积分</string>
    <string name="tips_rank">排名</string>
    <string name="tip_my_service">我的服务</string>
    <string name="tips_WxNames">公众号名称列表</string>
    <string name="user_coin_level">等级: %s</string>
    <string name="user_coin_rank">排名: %s</string>
    <string name="tip_rule">积分计算规则</string>
    <string name="rank_level">LV: %s </string>
    <string name="tip_goto_change_my_info">进入修改个人信息界面图标</string>
    <string name="tips_theme_mode_follow_system">主题模式跟随系统</string>
    <string name="setting_current_version">当前版本</string>
    <string name="current_version">V.%s</string>
    <string name="setting_user_info">个人信息</string>
    <string name="setting_privacy">隐私政策</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_about">关于</string>
    <string name="user_info_head">头像</string>
    <string name="user_info_name">昵称</string>
    <string name="user_info_input_name">请输入昵称</string>
    <string name="user_info_phone">手机</string>
    <string name="user_info_email">邮箱</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_birthday">生日</string>
    <string name="user_info_input_birthday">点击设置生日</string>
    <string name="default_save">保存</string>
    <string name="user_info_hint_email">点击设置邮箱</string>
    <string name="tips_share_article">去分享文章</string>
    <string name="share_count">已分享了 %d 篇文章</string>
    <string name="user_info_sex_hint">--</string>
    <string name="tips_sex_m">男</string>
    <string name="tips_sex_wm">女</string>
    <string name="tips_cancel">取消</string>
    <string name="tips_yes">确定</string>
    <string name="birthday">%d-%d-%d</string>
    <string name="tips_register">注册</string>
    <string name="tips_in_development">"正在开发中~"</string>
    <string name="about_title">关于我们</string>
    <string name="about_my_github">https://github.com/YiLeChen16</string>
    <string name="about_source_code">https://github.com/YiLeChen16/WanAndroid</string>
    <string name="about_introduce">## **项目介绍**\n
                    \n
                    \u200B\t本项目是基于 **MVVM**（Model-View-ViewModel）架构模式，结合 **Kotlin 语言**，**Retrofit 网络请求库**，**OkHttp3 请求拦截器**，**Jetpack 组件**，和 **Material Design 3** 设计规范实现的 **[WanAndroid](https://www.wanandroid.com/blog/show/2)** 客户端应用。\n
                    \n
                    - **MVVM 架构模式**：通过将业务逻辑与 UI 层分离，帮助开发者理解如何组织和管理应用的代码，提升代码的可维护性和可扩展性。\n
                    - **Kotlin 语言特性**：项目全面采用 Kotlin 语言，展示了 Kotlin 的简洁、安全和高效的特性，帮助开发者更好地掌握 Kotlin 编程技巧。\n
                    - **网络请求与数据处理**：使用 **Retrofit**  + **OkHttp3** 与 **Kotlin协程 **配合，展示了如何进行高效、可靠的网络请求，并处理 API 返回的数据。\n
                    - **Jetpack 组件**：项目集成了 Jetpack 的多个关键组件（包括 **LiveData**、**ViewModel**、**Flow**、**Paging**、**Room**、**Navigation** 等），帮助开发者了解现代 Android 开发的最佳实践。\n
                    - **Material Design 3**：采用最新的 Material Design 3 设计规范，展示了如何创建符合现代设计标准的界面，并提供一致且流畅的用户体验。\n
                    \n
                    \t项目中每个功能都配有**详细的注释**，旨在帮助开发者理解应用的结构和实现，便于学习和代码审查。\n\n
                    \t此外，本项目鼓励开发者提出建议和改进意见，若对本项目有任何疑问或更好的建议可在本项目的 **[issue](https://github.com/YiLeChen16/WanAndroid/issues)** 中提出，感谢支持~\n"
                    \n</string>

<string name="tips_rule">积分规则</string>
</resources>