<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
<<<<<<< HEAD
        android:orderInCategory="0"
=======
>>>>>>> 891810884e0260482ab4f05672b0615f60aba451
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/tips_home" />
    <item
<<<<<<< HEAD
        android:orderInCategory="1"
=======
>>>>>>> 891810884e0260482ab4f05672b0615f60aba451
        android:id="@+id/project"
        android:icon="@drawable/project"
        android:title="@string/tips_project" />
    <item
<<<<<<< HEAD
        android:orderInCategory="2"
=======
>>>>>>> 891810884e0260482ab4f05672b0615f60aba451
        android:id="@+id/system"
        android:icon="@drawable/system"
        android:title="@string/tips_system" />
    <item
<<<<<<< HEAD
        android:orderInCategory="3"
=======
>>>>>>> 891810884e0260482ab4f05672b0615f60aba451
        android:id="@+id/my"
        android:icon="@drawable/my"
        android:title="@string/tips_my" />
</menu>