<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_histories_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04">

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/dp_5"
            android:layout_height="@dimen/dp_18"
            android:background="@color/md_theme_primary"
            app:layout_constraintBottom_toBottomOf="@id/tv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv1" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/histories_title"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/line"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/is_fold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fold"
            app:layout_constraintStart_toEndOf="@id/tv1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/line"
            android:src="@drawable/selector_btn_is_fold"
            android:layout_marginStart="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:paddingStart="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"/>

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv1"
            android:padding="@dimen/dp_5"
            app:layout_constraintBottom_toBottomOf="@id/tv1"/>
        <LinearLayout
            android:id="@+id/detail_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/all_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_all_delete"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"/>
            <TextView
                android:id="@+id/delete_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_delete_ok"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_5"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>