<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="userInfoActivityViewModel"
            type="com.yl.wanandroid.viewmodel.UserInfoActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_surfaceContainer"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_primary"
            app:navigationIcon="@drawable/back_toolbar"
            app:title="个人信息"
            app:titleCentered="true"
            app:titleTextColor="@color/md_theme_onPrimary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/md_theme_surface"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_14"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tv_user_info"
                style="@style/userInfoLeftTextViewStyle"
                android:text="@string/user_info_head"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_head"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_head_next"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageStyle" />

            <ImageView
                android:id="@+id/iv_head_next"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dp_6"
                android:src="@drawable/chevron_right_16px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/md_theme_surfaceContainer"
            android:paddingStart="@dimen/dp_14"
            tools:ignore="RtlSymmetry" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surface"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_14"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tv_name_title"
                style="@style/userInfoLeftTextViewStyle"
                android:text="@string/user_info_name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@{userInfoActivityViewModel.user.nickName}"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/sp_14"
                tools:text="hhhh"
                android:layout_marginEnd="@dimen/dp_10"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/md_theme_surfaceContainer"
            android:paddingStart="@dimen/dp_14"
            tools:ignore="RtlSymmetry" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surface"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_14"
            tools:ignore="RtlSymmetry">

            <TextView
                style="@style/userInfoLeftTextViewStyle"
                android:text="@string/user_info_phone"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_8"
                android:text="@{userInfoActivityViewModel.user.account}"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="13800138000" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surface"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_14"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tv_name_email"
                style="@style/userInfoLeftTextViewStyle"
                android:text="@string/user_info_email"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_8"
                android:text="@{userInfoActivityViewModel.user.email}"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="3256478390@qq.com" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/md_theme_surface"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_14"
            tools:ignore="RtlSymmetry">

            <TextView
                style="@style/userInfoLeftTextViewStyle"
                android:text="@string/user_info_sex"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_8"
                android:text="@{userInfoActivityViewModel.user.sex}"
                android:textSize="@dimen/sp_14"
                android:hint="@string/user_info_sex_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_sex_next"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sex_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dp_6"
                android:src="@drawable/chevron_right_16px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginStart="@dimen/dp_14"
            android:background="@color/md_theme_surfaceContainer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surface"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/dp_8"
            android:paddingStart="@dimen/dp_14"
            tools:ignore="RtlSymmetry">

            <TextView
                style="@style/userInfoLeftTextViewStyle"
                android:text="@string/user_info_birthday"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical|end"
                android:hint="@string/user_info_input_birthday"
               android:padding="@dimen/dp_8"
                android:text="@{userInfoActivityViewModel.user.birthday}"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_birthday_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_birthday_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dp_6"
                android:src="@drawable/chevron_right_16px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_32"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/default_save"
            android:textSize="@dimen/sp_16"
            app:cornerRadius="@dimen/dp_30"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
</layout>